    Thanks Christian Froemmel.
  - Added Bluesome theme by Saku Lehtiö (#1188209).
  - Rewrite of advanced identity handlying to remove stupid extraction
    of all post variables. [CAN-2005-2095]
  - Added StartTLS support to address book LDAP backend (#1197703). Patch
    by John Lane.
  - Added subtree/one level search options to address book LDAP backend 
    (#1212618).

Version 1.5.0 - 2 February 2004
-------------------------------
  - Added new preference that determines cursor focus when replying
  - Added support in conf.pl for MS cls command.
  - conf.pl changes for relative paths outside the SM tree (#715119).
  - conf.pl changes for delete_folder restrictions with Courier-IMAP and
    UW-IMAP (#715550).
  - Fixed code to allow for \ in password/username (#718116).
  - Added mailto: support for Windows clients.  See
    contrib/squirrelmail.mailto.reg
  - Added lowsrc to the list of attributes to be removed.
  - Fixed message highlighting for To, CC and From and
    for RFC1522 headers (bug #719564)
  - Fixed incorrect folding inside message-id's
  - Fix for Folders being listed in create/remove/rename operations
    (#725443, #722823, #729225)
  - Fix for bad attachment view link (#697381, #729295)
  - Fix comp_in_new in search and addressbook not having right parameters (#731768).
  - Fix max attachment filesize off by factor 10 when ini_var set in bytes (#730742).
  - Fix for parsing fetch results. We are now able to extract the UID if it's
    returned after the header.
  - Remove obsoleted parsing functions.
  - Fixed language bug in posting on modifying/deleting servers on mail_fetch plugin
    (#742705).
  - Fixed infinite loop in parseAddress on invalid mailaddress (#742584).
  - Rewrote ugly "Not a very useful errormessage" to something more friendly.
  - Make central function for compose links to make sure compose_in_new always
    works the same way.
  - Fix that when JavaScript off, compose in new was broken (#749654).