@@ -1,0 +1,33 @@
+<?php
+/**
+ * Author:       Vicky Pyne <dotvicky@dotvicky.net>
+ * Date:         June 7, 2005
+ * Theme Name:   'Simple Purple'
+ * Copyright:    Vicky Pyne <dotvicky@dotvicky.net>, 2005
+ * Licence:      GNU Public License
+ *
+ * Published on SquirrelMail SourceForge tracker (#1217069).
+ * Modified by SquirrelMail developers to match documentation guidelines.
+ * Copyright (c) 2005 The SquirrelMail Project Team
+ * @package squirrelmail
+ * @subpackage themes
+ */
+
+global $color;
+$color[0]   = '#DCDCDC'; // (light gray)     TitleBar
+$color[1]   = '#800000'; // (red)
+$color[2]   = '#CC0000'; // (light red)      Warning/Error Messages
+$color[3]   = '#B6A7D5'; // (pale-purple)    Left Bar Background
+$color[4]   = '#FFFFFF'; // (white)          Normal Background
+$color[5]   = '#877C9F'; // (greyish-purple) Table Headers
+$color[6]   = '#000000'; // (black)          Text on left bar
+$color[7]   = '#663399'; // (purple)         Links
+$color[8]   = '#000000'; // (black)          Normal text
+$color[9]   = '#ABABAB'; // (mid-gray)       Darker version of #0
+$color[10]  = '#666666'; // (dark gray)      Darker version of #9
+$color[11]  = '#330066'; // (darker purple)  Special Folders color
+$color[12]  = '#EDEDED'; // (light gray)     Alternate color for message list
+$color[13]  = '#6666CC'; // (dull blue)      Color for quoted text -- > 1 quote
+$color[14]  = '#333399'; // (dark blue)      Color for quoted text -- >> 2 or more
+$color[15]  = '#9966CC'; // (grey-purple)    Unselectable folders
+?>
